--- a/sheets/calligrasheets_readonly.rc
+++ b/sheets/calligrasheets_readonly.rc
@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KSpread" version="2" translationDomain="sheets">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KSpread" version="2" translationDomain="calligrasheets">
 <MenuBar>
  <Menu name="edit"><text>&amp;Edit</text>
   <Action name="copy"/>
