--- a/sheets/data/templates/General/CMakeLists.txt
+++ b/sheets/data/templates/General/CMakeLists.txt
@@ -1,5 +1,5 @@
-install( FILES  Worksheet.kst StudentIDCard.kst  DESTINATION ${DATA_INSTALL_DIR}/sheets/templates/General/.source)
-install( FILES  .directory Worksheet.desktop StudentIDCard.desktop  DESTINATION ${DATA_INSTALL_DIR}/sheets/templates/General)
+install( FILES  Worksheet.kst StudentIDCard.kst  DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/templates/General/.source)
+install( FILES  .directory Worksheet.desktop StudentIDCard.desktop  DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/templates/General)
 
 ecm_install_icons( ICONS
     48-actions-template_studentidcard.png
@@ -7,6 +7,6 @@ ecm_install_icons( ICONS
     sc-actions-template_studentidcard.svgz
     sc-actions-template_worksheet.svgz
 
-    DESTINATION ${DATA_INSTALL_DIR}/sheets/icons
+    DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/icons
     THEME hicolor
 )
