--- a/sheets/plugins/scripting/CMakeLists.txt
+++ b/sheets/plugins/scripting/CMakeLists.txt
@@ -38,4 +38,4 @@ target_link_libraries(krossmodulesheets
 )
 
 install(TARGETS krossmodulesheets DESTINATION ${PLUGIN_INSTALL_DIR}/calligrasheets/extensions)
-install( FILES scripting.rc  DESTINATION ${DATA_INSTALL_DIR}/sheets/viewplugins)
+install( FILES scripting.rc  DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/viewplugins)
