--- a/sheets/plugins/scripting/scripts/CMakeLists.txt
+++ b/sheets/plugins/scripting/scripts/CMakeLists.txt
@@ -1,6 +1,6 @@
 install(FILES
     scripts.rc
-    DESTINATION ${DATA_INSTALL_DIR}/sheets/scripts)
+    DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/scripts)
 
 install(FILES
     csvimport.py csvexport.py csvoptions.ui
@@ -10,16 +10,16 @@ install(FILES
     logger.py
     xmlviewer.py
     myorca.py
-    DESTINATION ${DATA_INSTALL_DIR}/sheets/scripts/extensions)
+    DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/scripts/extensions)
 
 install(FILES
     functions.py
     rpyfunctions.py
     yfinance.py yweather.py
     pytime.py pyregexp.py
-    DESTINATION ${DATA_INSTALL_DIR}/sheets/scripts/functions)
+    DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/scripts/functions)
 
 install(FILES
     consoledocker.py
     snippetsdocker.rb
-    DESTINATION ${DATA_INSTALL_DIR}/sheets/scripts/docker)
+    DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/scripts/docker)
