--- a/sheets/calligrasheets.rc
+++ b/sheets/calligrasheets.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui name="Calligra Sheets" version="42" translationDomain="sheets">
+<gui name="Calligra Sheets" version="42" translationDomain="calligrasheets">
 <MenuBar>
 <!-- <<<<<<<<<<<<<<<<<<<<<>>>>><   File Menu   >>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
  <Menu name="file"><text>&amp;File</text>
