--- a/sheets/data/templates/Business/CMakeLists.txt
+++ b/sheets/data/templates/Business/CMakeLists.txt
@@ -1,6 +1,6 @@
 
-install( FILES  Invoice.kst ExpenseReport.kst BalanceSheet.kst PriceQuotation.kst PackingSlip.kst  DESTINATION ${DATA_INSTALL_DIR}/sheets/templates/Business/.source)
-install( FILES  .directory Invoice.desktop ExpenseReport.desktop BalanceSheet.desktop PriceQuotation.desktop PackingSlip.desktop  DESTINATION ${DATA_INSTALL_DIR}/sheets/templates/Business)
+install( FILES  Invoice.kst ExpenseReport.kst BalanceSheet.kst PriceQuotation.kst PackingSlip.kst  DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/templates/Business/.source)
+install( FILES  .directory Invoice.desktop ExpenseReport.desktop BalanceSheet.desktop PriceQuotation.desktop PackingSlip.desktop  DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/templates/Business)
 
 ecm_install_icons( ICONS
     48-actions-template_balancesheet.png
@@ -14,7 +14,7 @@ ecm_install_icons( ICONS
     sc-actions-template_packingslip.svgz
     sc-actions-template_pricequotation.svgz
 
-    DESTINATION ${DATA_INSTALL_DIR}/sheets/icons
+    DESTINATION ${DATA_INSTALL_DIR}/calligrasheets/icons
     THEME hicolor
 )
 
