--- a/sheets/org.kde.calligrasheets.desktop
+++ b/sheets/org.kde.calligrasheets.desktop
@@ -126,7 +126,7 @@ X-KDE-ServiceTypes=Calligra/Application
 X-Calligra-DefaultMimeTypes=application/vnd.oasis.opendocument.spreadsheet,application/x-kspread,application/vnd.ms-excel,text/csv,application/x-quattropro,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.openxmlformats-officedocument.spreadsheetml.template
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.spreadsheet
 X-DBUS-StartupType=multi
-X-DBUS-ServiceName=org.calligra.sheets
+X-DBUS-ServiceName=org.kde.calligrasheets
 X-DocPath=sheets/index.html
 X-KDE-StartupNotify=true
 Categories=Qt;KDE;Office;
