--- a/braindump/data/CMakeLists.txt
+++ b/braindump/data/CMakeLists.txt
@@ -9,5 +9,5 @@ add_subdirectory(icons)
 install( FILES braindumpui.rc braindumpview.rc DESTINATION ${KXMLGUI_INSTALL_DIR}/braindump)
 
 ### desktop files ###
-install( PROGRAMS braindump.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
-install( FILES braindump.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
+install( PROGRAMS org.kde.braindump.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
+install( FILES org.kde.braindump.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
