--- a/libs/textlayout/CMakeLists.txt
+++ b/libs/textlayout/CMakeLists.txt
@@ -45,6 +45,8 @@ set_target_properties(kotextlayout PROPERTIES
 )
 install(TARGETS kotextlayout  ${INSTALL_TARGETS_DEFAULT_ARGS})
 
+if (SHOULD_BUILD_DEVEL_HEADERS)
+
 install(
     FILES
     KoTextDocumentLayout.h
@@ -56,3 +58,5 @@ install(
     DESTINATION
     ${INCLUDE_INSTALL_DIR}/calligra COMPONENT Devel
 )
+
+endif()
