--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -247,6 +247,8 @@ install(TARGETS flake  ${INSTALL_TARGETS_DEFAULT_ARGS})
 #     scripteventaction.desktop
 #     filtereffect.desktop
 
+if (SHOULD_BUILD_DEVEL_HEADERS)
+
 install(
     FILES
     KoCanvasBase.h
@@ -350,3 +352,5 @@ install(
     DESTINATION
     ${INCLUDE_INSTALL_DIR}/calligra COMPONENT Devel
 )
+
+endif()
