--- a/libs/store/CMakeLists.txt
+++ b/libs/store/CMakeLists.txt
@@ -45,8 +45,11 @@ set_target_properties(kostore PROPERTIES
 )
 install(TARGETS kostore ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
+if (SHOULD_BUILD_DEVEL_HEADERS)
 
 install( FILES
     ${CMAKE_CURRENT_BINARY_DIR}/kostore_export.h
     KoStore.h
 DESTINATION ${INCLUDE_INSTALL_DIR}/calligra COMPONENT Devel)
+
+endif()
