--- a/libs/version/CMakeLists.txt
+++ b/libs/version/CMakeLists.txt
@@ -19,8 +19,12 @@ set_target_properties(koversion PROPERTIES
 )
 install(TARGETS koversion ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
+if (SHOULD_BUILD_DEVEL_HEADERS)
+
 install( FILES
     ${CMAKE_CURRENT_BINARY_DIR}/calligraversion.h
     ${CMAKE_CURRENT_BINARY_DIR}/calligragitversion.h
     ${CMAKE_CURRENT_BINARY_DIR}/koversion_export.h
 DESTINATION ${INCLUDE_INSTALL_DIR}/calligra COMPONENT Devel)
+
+endif()
