--- a/braindump/data/CMakeLists.txt
+++ b/braindump/data/CMakeLists.txt
@@ -10,4 +10,4 @@ install( FILES braindumpui.rc braindumpview.rc DESTINATION ${KXMLGUI_INSTALL_DIR
 
 ### desktop files ###
 install( PROGRAMS org.kde.braindump.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
-install( FILES org.kde.braindump.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
+install( FILES org.kde.braindump.appdata.xml DESTINATION ${KDE_INSTALL_METAINFODIR})
