--- a/filters/libmsooxml/CMakeLists.txt
+++ b/filters/libmsooxml/CMakeLists.txt
@@ -61,8 +61,10 @@ endif()
 set_target_properties(komsooxml PROPERTIES VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION} )
 install(TARGETS komsooxml ${INSTALL_TARGETS_DEFAULT_ARGS})
 
-install(FILES msooxml-all.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
-update_xdg_mimetypes(${XDG_MIME_INSTALL_DIR})
+if (SharedMimeInfo_FOUND)
+    install(FILES msooxml-all.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
+    update_xdg_mimetypes(${XDG_MIME_INSTALL_DIR})
+endif()
 
 if (FALSE) # these headers are private for now
 install( FILES
