Install wiki mimetypes only if filter is build

--- a/filters/words/wiki/CMakeLists.txt
+++ b/filters/words/wiki/CMakeLists.txt
@@ -1,8 +1,10 @@
 #add_subdirectory(import)
 
-install(FILES wiki-format.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
-update_xdg_mimetypes(${XDG_MIME_INSTALL_DIR})
-
 if(SHOULD_BUILD_FILTER_ODT_TO_WIKI)
+if (SharedMimeInfo_FOUND)
+    install(FILES wiki-format.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
+    update_xdg_mimetypes(${XDG_MIME_INSTALL_DIR})
+endif()
+
 add_subdirectory(export)
 endif()
