Make kcoreaddons_desktop_to_json calls using the servicetype files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,7 @@ include(MacroBoolTo01)
 include(MacroOptionalFindPackage)
 include(MacroEnsureVersion)
 include(MacroJPEG)
+include(MacroDesktopToJson)
 
 
 set(REQUIRED_KF5_VERSION "5.7.0")
