Support ODF load/save/display of luminance, contrast, rgb levels and gamma
New feature / ODF bug fix

--- a/plugins/pictureshape/CMakeLists.txt
+++ b/plugins/pictureshape/CMakeLists.txt
@@ -20,6 +20,8 @@ set (pictureshape_LIB_SRCS
     filters/GreyscaleFilterEffect.cpp
     filters/MonoFilterEffect.cpp
     filters/WatermarkFilterEffect.cpp
+    filters/ColoringFilterEffect.cpp
+    filters/GammaFilterEffect.cpp
 )
 
 ki18n_wrap_ui(pictureshape_LIB_SRCS forms/wdgPictureTool.ui)
